--- a/src/pages/user-uploads/user-uploads.scss
+++ b/src/pages/user-uploads/user-uploads.scss
@@ -2,4 +2,18 @@ page-user-uploads {
     ion-title {
         text-align: center;
     } 
+
+
+.box
+{
+    border: 2px solid #1f7a8c;
+    padding: 8px;
+    text-align: center;
+    color: #011627; 
+}
+
+p
+{
+    font-style: italic;
+}
 }
