--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,7 +8,7 @@
         <ion-footer>
          <ion-toolbar>
             <ion-list>
-             <button ion-item (click)="gotoSettings()">
+             <button ion-item (click)="openPage(SettingsPage)">
              <ion-icon name="settings"></ion-icon>
                Settings
              </button>
@@ -26,9 +26,9 @@
         </ion-footer>
         <ion-content>
           <ion-list>
-            <button ion-item (click)="openPage(friendsPage)">
+            <button ion-item *ngFor = "let p of pages" (click)="openPage(p)">
                 <ion-icon name="create"></ion-icon>
-                Edit Profile
+                {{p.title}}
             </button>
             <button ion-item (click)="openPage(friendsPage)">
                 <ion-icon name="clock"></ion-icon>
