--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,7 +8,7 @@
         <ion-footer>
          <ion-toolbar>
             <ion-list>
-             <button ion-item (click)="gotoSettings()">
+             <button ion-item (click)="buttonClicked()">
              <ion-icon name="settings"></ion-icon>
                Settings
              </button>
