--- a/src/app/app.html
+++ b/src/app/app.html
@@ -24,9 +24,9 @@
                        Help and Support
                     </button>
                    </ion-list>
-                    <button ion-button icon color="dark" clear (click)="closeMenu()">
-                    <ion-icon name="exit"></ion-icon>
-                       Log Out
+                    <button ion-button icon color="dark"  clear (click)="openPage()">
+                    <ion-icon name="exit" ></ion-icon>
+                    Log Out
                     </button>   
                </ion-toolbar>
                </ion-footer>
