--- a/src/app/app.html
+++ b/src/app/app.html
@@ -25,7 +25,7 @@
                        Help and Support
                     </button>
                    </ion-list>
-                    <button ion-button icon color="dark" clear (click)="DoLogOut()">
+                    <button ion-button icon color="dark" clear (click)="LogOut()">
                     <ion-icon name="exit"></ion-icon>
                        Log Out
                     </button>   
