--- a/src/pages/comments/comments.scss
+++ b/src/pages/comments/comments.scss
@@ -1,3 +1,12 @@
 page-comments {
 
+    .innerComment {
+        display: inline-block;
+        padding:  5px 10 px;
+        background: color($colors, 'primary');
+        margin: 5px;
+        color: white;
+        border-radius: 3px;
+    }
+
 }
