--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -10,6 +10,19 @@ page-profile {
      margin-left: 33%;
      margin-right: auto;
     }
+   
+    .placeholder{
+        vertical-align: center;
+    }
+
+    p{
+        text-align: center;
+    }
+
+    .align{
+        position:relative;
+        text-align: center;
+    }
     
     img{
         max-width: 70%;
