--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -22,12 +22,18 @@ page-home {
       }
     }
     
-    h4{
-      text-align: center;
-      font: 100 130px/0.8 'Great Vibes', Helvetica, sans-serif;
-      font-style: italic;
-      color: black;
-      text-shadow: 4px 4px 3px rgba(0,0,0,0.1); 
+    page-home{
+      toolbar-title toolbar-title-ios { 
+        font-size: 3.0rem;
+      }
+    
+      toolbar-title toolbar-title-md { 
+        font-size: 2rem;
+      }
+    
+      toolbar-title toolbar-title-wp { 
+        font-size: 1.5rem;
+      }
     }
 
     .active.up {
