--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -1,3 +1,66 @@
 page-register {
+    ion-content {
+        /*background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);*
+        background: linear-gradient(to bottom, #4568dc, #b06ab3);*/
+        background: rgb(28,25,112);
+        background: linear-gradient(to bottom, rgba(28,25,112,1) 0%, rgba(38,117,166,1) 50%, rgba(173,164,252,1) 100%);
+      }
+    
+    .align{
+        display: inline;
+    }
 
+    ion-card.card {
+        box-shadow: none;
+        background: rgba(0, 0, 0, 0.5);
+        border-radius: 5px;
+    }
+    a, p,
+    ion-card-header.card-header {
+        color: #fff!important;
+    }
+     
+    .list > .item-block:first-child {
+        border: medium none;
+    }
+     
+    .item {
+        margin-bottom: 10px;
+        background: rgba(255, 255, 255, 0.5);
+        border: medium none;
+     
+        .text-input {
+            color: #fff;
+        }
+     
+        
+        input::-moz-placeholder{
+            color: #fff!important;
+        }
+        input:-moz-placeholder {
+            color: #fff!important;
+        }
+        *:-moz-placeholder{
+            color: #fff!important;
+        }
+        *:-ms-input-placeholder{
+            color: #fff!important;
+        }
+        *::-webkit-input-placeholder{
+            color: #fff!important;
+        }
+     
+    }
+     
+    .icon {
+        padding-right: 10px;
+    }
+     
+    .bottom {
+        bottom: 0;
+    }
+     
+    .input-cover {
+    position: static;
+    }
 }
