--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -36,8 +36,10 @@ page-profile {
     }
     
     .container .border{
+        padding: 1rem;
         position: relative;
-        border: 4px solid #1f7a8c;
+        background: linear-gradient(to bottom, rgba(28,25,112,1) 0%, rgba(38,117,166,1) 50%, rgba(173,164,252,1) 100%);
+        padding: 4px;
     }
     
     .container .buttonPos{
