--- a/src/pages/user-uploads/user-uploads.scss
+++ b/src/pages/user-uploads/user-uploads.scss
@@ -8,10 +8,27 @@ page-user-uploads {
 
     .box
     {
-        border: 6px solid #3B7AE6;
-        padding: 8px;
         text-align: center;
-        color: #011627; 
+        //width: 50vw;
+        position: relative;
+        padding: 4px;
+        box-sizing: border-box;
+        
+        $border: 4px;
+        color: #011627;
+        background: #fff;
+        background-clip: padding-box; /* !importanté */
+        border: solid $border transparent; /* !importanté */
+      
+        &:before {
+          content: '';
+          position: absolute;
+          top: 0; right: 0; bottom: 0; left: 0;
+          z-index: -1;
+          margin: -$border; /* !importanté */
+          border-radius: inherit; /* !importanté */
+          background: linear-gradient(to bottom, rgba(28,25,112,1) 0%, rgba(38,117,166,1) 50%, rgba(173,164,252,1) 100%);
+        } 
     }
 
     p
