--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -4,7 +4,7 @@ page-login {
         /*background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);*
         background: linear-gradient(to bottom, #4568dc, #b06ab3);*/
         background: rgb(28,25,112);
-        background: linear-gradient(to bottom, rgba(28,25,112,1) 0%, rgba(38,117,166,1) 50%, rgba(173,164,252,1) 100%);
+        background: linear-gradient(to bottom, rgb(28, 25, 109) 0%, rgba(38,117,166,1) 50%, rgba(173,164,252,1) 100%);
       }
     
     .align{
