--- a/src/pages/user-uploads/user-uploads.scss
+++ b/src/pages/user-uploads/user-uploads.scss
@@ -7,6 +7,9 @@ page-user-uploads {
         //font-size: 10em;
     } 
 
+    ion-fab{
+        padding: 0em;
+    }
 
     .card{
        border: #fff
