--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -3,6 +3,14 @@ page-profile {
         text-align: center;
     }
     
+    .featured{
+     padding-top: 2em;
+     max-width: 50%;
+     width: 50%;
+     margin: auto;
+     //border-block-end-style: dotted;
+    }
+
     .container{
      position: relative;
      max-width: 50%;
