--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -10,7 +10,11 @@ page-home {
   width:200px;
   height: 200px;
 }
-  
+
+.app-font-25 ion-label{
+  white-space: inherit;
+  font-size: 25px;
+}
 
 .votebox {
     height: 120px;
@@ -49,4 +53,19 @@ page-home {
        color: red;
      }
   
+  }
+  ion-title {
+    font-family: Arial, Helvetica, sans-serif;
+     color: black ; 
+     text-align: justify ;
+     top: 0;
+     position: relative;
+  }
+  ion-avatar {
+    padding: 0;
+  }
+
+  p{
+    font-size : 70pt;
+    font-weight: bold;
   }
