font size change on profile page

--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -25,6 +25,8 @@ page-profile {
 
     p{
         text-align: center;
+        font-weight: lighter;
+        font-size: 1em;
     }
 
     .align{
