help and support and settings buttons removed

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -15,15 +15,15 @@
             <ion-footer>
                 <ion-toolbar>
                    <ion-list>
-                    <button ion-item (click)="openPage(SettingsPage)">
+                    <!--<button ion-item (click)="openPage(SettingsPage)">-->
                       <!--FIX LATER: openPage nonfunctional for settings and help/support-->
-                    <ion-icon name="settings"></ion-icon>
+                    <!--<ion-icon name="settings"></ion-icon>
                       Settings
                     </button>
                     <button ion-item (click)="openPage(friendsPage)">
                     <ion-icon name="help-circle"></ion-icon>
                        Help and Support
-                    </button>
+                    </button>-->
                    </ion-list>
                     <button ion-button icon color="dark" clear (click)="LogOut()">
                     <ion-icon name="exit"></ion-icon>
