--- a/src/pages/explore/explore.scss
+++ b/src/pages/explore/explore.scss
@@ -41,6 +41,10 @@ page-explore {
         padding: 0.5em 0.1em;
     }
 
+    ion-icon {
+        font-size: 30px; //Preferred size here
+    }
+
 
     
 }
