--- a/src/pages/other-profile/other-profile.scss
+++ b/src/pages/other-profile/other-profile.scss
@@ -1,3 +1,27 @@
 page-other-profile {
+    h2{
+        text-align: center;
+    }
 
+    p{
+        text-align: center;
+        font-weight: lighter;
+        font-size: 1em;
+    }
+
+    .container{
+        position: relative;
+        max-width: 50%;
+        width:50%;
+        margin-left: 25%;
+        margin-right: auto;
+       }
+
+       .container .border{
+        padding: 1rem;
+        position: relative;
+        background: linear-gradient(to bottom, rgba(28,25,112,1) 0%, rgba(38,117,166,1) 50%, rgba(173,164,252,1) 100%);
+        padding: 4px;
+    }
+      
 }
