Push notifications plugins, minor tweaks; References cited as comments - code pertaining/related to direct messages functionality modeled from code of author Raja Yogan

--- a/src/pages/friendchat/friendchat.scss
+++ b/src/pages/friendchat/friendchat.scss
@@ -1,3 +1,8 @@
+/**
+ * Styling in this page is modeled from that of https://tphangout.com/chat-app-with-ionic-3-firebase-ep-8-one2one-chat/
+ * Author of code from above link: Raja Yogan
+ */
+ 
 page-friendchat {
     .chat {
         width: 100%;
