navigation changes to useruploads pg

--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -60,6 +60,13 @@ page-profile {
         margin: auto;
         color: #f17300;
     }
+
+    .segment-button {
+        border-color: black !important;
+        $segment-button-ios-text-color: black;
+    }
+
+
     }
     
     
