ion button color change

--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -60,6 +60,11 @@ page-profile {
         margin: auto;
         color: #f17300;
     }
+
+   
+
+    $segment-button-ios-background-color-activated: gray !important;
+
     }
     
     
