--- a/src/pages/other-profile/other-profile.scss
+++ b/src/pages/other-profile/other-profile.scss
@@ -1,4 +1,12 @@
 page-other-profile {
+    .featured{
+        padding-top: 1em;
+        max-width: 50%;
+        width: 50%;
+        margin: auto;
+        //border-block-end-style: dotted;
+       }
+
     h2{
         text-align: center;
     }
