--- a/src/pages/otheruserprofile/otheruserprofile.scss
+++ b/src/pages/otheruserprofile/otheruserprofile.scss
@@ -1,4 +1,12 @@
 page-otheruserprofile {
+    .featured{
+        padding-top: 1em;
+        max-width: 50%;
+        width: 50%;
+        margin: auto;
+        //border-block-end-style: dotted;
+       }
+
     h2{
         text-align: center;
     }
